apps/transmission/vpn-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-vpn-ui
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: torrent-vpn.${BASE_DOMAIN}
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - secretName: transmission-vpn-ui-tls
      hosts:
        - torrent-vpn.${BASE_DOMAIN}
  rules:
    - host: torrent-vpn.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-vpn-ui
                port:
                  number: 3000
